# archscope

./: .clang-format  .clang-tidy  .cmake-format.py  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
agents/: AGENTS.md  LEARNINGS.md  SPEC.md  TASKS.md  TASK_PROMPT.md
cmake/: CompilerWarnings.cmake
docs/: developer-guide.md  user-manual.md
docs/adr/: 0001-bootstrap-build-scaffold.md  0002-fetch-catch2-with-cmake.md  0003-add-clang-tooling-adapter.md  0004-introduce-metric-registry-for-cli-dispatch.md  0005-use-clang-libtooling.md  0006-module-ownership-rules.md  0007-dependency-definition-and-exclusions.md  0008-test-strategy.md
scripts/: build.sh  check-format.sh  configure.sh  run-tidy.sh
src/clang/: analysis_projection.cpp  analysis_projection.hpp  namespace_module_resolver.cpp  namespace_module_resolver.hpp  parallel_executor.cpp  parallel_executor.hpp  tool_runner.cpp  tool_runner.hpp
src/cli/: main.cpp
src/common/: result.hpp
src/core/: analysis.cpp  analysis.hpp  cli_text.cpp  cli_text.hpp  cli_tokens.cpp  cli_tokens.hpp  compilation_database.cpp  compilation_database.hpp  compilation_database_loader.cpp  compile_commands_decoder.cpp  compile_commands_decoder.hpp  json_value.cpp  json_value.hpp  metrics.cpp  metrics.hpp  module_filter.cpp  module_filter.hpp  report.cpp  report.hpp  version.cpp  version.hpp
tests/fixtures/compilation_target_project/: compile_commands.json
tests/fixtures/compilation_target_project/include/: shared.hpp
tests/fixtures/compilation_target_project/src/: alpha.cpp  beta.cpp  gamma.cpp
tests/fixtures/dependency_project/: compile_commands.json
tests/fixtures/dependency_project/src/: alpha.cpp  beta.cpp
tests/fixtures/header_project/include/domain/: alpha.hpp  beta.hpp
tests/fixtures/header_project/src/: alpha.cpp  beta.cpp
tests/fixtures/namespace_project/src/: alpha.cpp  beta.cpp
tests/fixtures/parallel_project/: compile_commands.json
tests/fixtures/parallel_project/include/platform/: api.hpp  model.hpp
tests/fixtures/parallel_project/src/adapters/: cli.cpp  http.cpp
tests/fixtures/parallel_project/src/app/: facade.cpp
tests/fixtures/parallel_project/src/domain/: order.cpp  session.cpp  user.cpp
tests/fixtures/parse_failure_project/: compile_commands.json
tests/fixtures/parse_failure_project/src/: broken.cpp
tests/fixtures/placeholder_project/: compile_commands.json
tests/fixtures/placeholder_project/src/: alpha.cpp  zeta.cpp
tests/support/: catch_session.cpp
tests/support/catch2/: catch_test_macros.hpp
tests/system/: check_compilation_target_report.cmake  check_error_case.cmake  check_header_filter_report.cmake  check_internal_error_case.cmake  check_namespace_filter_report.cmake  check_parallel_determinism.cmake  check_placeholder_report.cmake  check_translation_unit_distance_report.cmake  check_translation_unit_instability_report.cmake  check_verbose_logging.cmake  check_version.cmake
tests/system/expected/: compilation-target-report.md  header-filter-report.md  namespace-filter-report.md  placeholder-report.md  translation-unit-distance-report.md  translation-unit-instability-report.md  version.txt
tests/unit/: abstractness_metric_tests.cpp  analysis_projection_tests.cpp  analysis_result_tests.cpp  clang_tool_runner_tests.cpp  cli_text_tests.cpp  cli_tokens_tests.cpp  compilation_database_loader_tests.cpp  compile_commands_decoder_tests.cpp  dependency_graph_builder_tests.cpp  distance_metric_tests.cpp  instability_metric_tests.cpp  json_value_tests.cpp  metric_registry_tests.cpp  module_filter_tests.cpp  namespace_module_resolver_tests.cpp  parallel_executor_tests.cpp  report_writer_tests.cpp  test_main.cpp  type_count_metric_tests.cpp  version_tests.cpp
